GenerateParser/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


	using GenerateParser.Rules;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, WS=2, GRAMMAR=3, SKIP_ACTION=4, RETURN=5, HEADER=6, GrammarName=7, 
		LexerName=8, END=9, IS=10, OR=11, OPEN=12, CLOSE=13, ASSIGN=14, RETURNBLOCK=15, 
		STRING=16, CODE=17;
	public const int
		RULE_file = 0, RULE_header = 1, RULE_line = 2, RULE_grammarRule = 3, RULE_grammarRuleArg = 4, 
		RULE_productions = 5, RULE_productionsArg = 6, RULE_production = 7, RULE_productionArg = 8, 
		RULE_productionArgTail = 9, RULE_grammarName = 10, RULE_lexerToken = 11, 
		RULE_lexerRuleName = 12, RULE_lexerRule = 13;
	public static readonly string[] ruleNames = {
		"file", "header", "line", "grammarRule", "grammarRuleArg", "productions", 
		"productionsArg", "production", "productionArg", "productionArgTail", 
		"grammarName", "lexerToken", "lexerRuleName", "lexerRule"
	};

	private static readonly string[] _LiteralNames = {
		null, "'->'", null, "'grammar'", "'skip'", "'returns'", "'@header'", null, 
		null, "';'", "':'", "'|'", "'['", "']'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "WS", "GRAMMAR", "SKIP_ACTION", "RETURN", "HEADER", "GrammarName", 
		"LexerName", "END", "IS", "OR", "OPEN", "CLOSE", "ASSIGN", "RETURNBLOCK", 
		"STRING", "CODE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class FileContext : ParserRuleContext {
		public ITerminalNode GRAMMAR() { return GetToken(GrammarParser.GRAMMAR, 0); }
		public ITerminalNode LexerName() { return GetToken(GrammarParser.LexerName, 0); }
		public ITerminalNode END() { return GetToken(GrammarParser.END, 0); }
		public ITerminalNode Eof() { return GetToken(GrammarParser.Eof, 0); }
		public HeaderContext header() {
			return GetRuleContext<HeaderContext>(0);
		}
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28; Match(GRAMMAR);
			State = 29; Match(LexerName);
			State = 30; Match(END);
			State = 32;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==HEADER) {
				{
				State = 31; header();
				}
			}

			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 34; line();
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==GrammarName || _la==LexerName );
			State = 39; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderContext : ParserRuleContext {
		public ITerminalNode HEADER() { return GetToken(GrammarParser.HEADER, 0); }
		public ITerminalNode CODE() { return GetToken(GrammarParser.CODE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterHeader(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitHeader(this);
		}
	}

	[RuleVersion(0)]
	public HeaderContext header() {
		HeaderContext _localctx = new HeaderContext(Context, State);
		EnterRule(_localctx, 2, RULE_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41; Match(HEADER);
			State = 42; Match(CODE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public Rule ret;
		public GrammarRuleContext _grammarRule;
		public GrammarRuleArgContext _grammarRuleArg;
		public LexerRuleContext _lexerRule;
		public GrammarRuleContext grammarRule() {
			return GetRuleContext<GrammarRuleContext>(0);
		}
		public ITerminalNode END() { return GetToken(GrammarParser.END, 0); }
		public GrammarRuleArgContext grammarRuleArg() {
			return GetRuleContext<GrammarRuleArgContext>(0);
		}
		public LexerRuleContext lexerRule() {
			return GetRuleContext<LexerRuleContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 4, RULE_line);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; _localctx._grammarRule = grammarRule();
				State = 45; Match(END);
				_localctx.ret = _localctx._grammarRule.ret;
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 48; _localctx._grammarRuleArg = grammarRuleArg();
				State = 49; Match(END);
				_localctx.ret = _localctx._grammarRuleArg.ret;
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 52; _localctx._lexerRule = lexerRule();
				State = 53; Match(END);
				_localctx.ret = _localctx._lexerRule.ret;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GrammarRuleContext : ParserRuleContext {
		public GrammarRule ret;
		public GrammarNameContext _grammarName;
		public ProductionsContext _productions;
		public GrammarNameContext grammarName() {
			return GetRuleContext<GrammarNameContext>(0);
		}
		public ITerminalNode IS() { return GetToken(GrammarParser.IS, 0); }
		public ProductionsContext productions() {
			return GetRuleContext<ProductionsContext>(0);
		}
		public GrammarRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammarRule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterGrammarRule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitGrammarRule(this);
		}
	}

	[RuleVersion(0)]
	public GrammarRuleContext grammarRule() {
		GrammarRuleContext _localctx = new GrammarRuleContext(Context, State);
		EnterRule(_localctx, 6, RULE_grammarRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; _localctx._grammarName = grammarName();
			State = 59; Match(IS);
			State = 60; _localctx._productions = productions();
			_localctx.ret = new GrammarRule(_localctx._grammarName.text, _localctx._productions.ret);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GrammarRuleArgContext : ParserRuleContext {
		public Rule ret;
		public GrammarNameContext _grammarName;
		public IToken _RETURNBLOCK;
		public ProductionsArgContext _productionsArg;
		public GrammarNameContext grammarName() {
			return GetRuleContext<GrammarNameContext>(0);
		}
		public ITerminalNode RETURN() { return GetToken(GrammarParser.RETURN, 0); }
		public ITerminalNode RETURNBLOCK() { return GetToken(GrammarParser.RETURNBLOCK, 0); }
		public ITerminalNode IS() { return GetToken(GrammarParser.IS, 0); }
		public ProductionsArgContext productionsArg() {
			return GetRuleContext<ProductionsArgContext>(0);
		}
		public GrammarRuleArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammarRuleArg; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterGrammarRuleArg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitGrammarRuleArg(this);
		}
	}

	[RuleVersion(0)]
	public GrammarRuleArgContext grammarRuleArg() {
		GrammarRuleArgContext _localctx = new GrammarRuleArgContext(Context, State);
		EnterRule(_localctx, 8, RULE_grammarRuleArg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63; _localctx._grammarName = grammarName();
			State = 64; Match(RETURN);
			State = 65; _localctx._RETURNBLOCK = Match(RETURNBLOCK);
			State = 66; Match(IS);
			State = 67; _localctx._productionsArg = productionsArg();
			_localctx.ret = new RuleWithCode(_localctx._grammarName.text,(_localctx._RETURNBLOCK!=null?_localctx._RETURNBLOCK.Text:null),_localctx._productionsArg.ret);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProductionsContext : ParserRuleContext {
		public Productions ret;
		public ProductionContext _production;
		public ProductionsContext _productions;
		public ProductionContext production() {
			return GetRuleContext<ProductionContext>(0);
		}
		public ITerminalNode OR() { return GetToken(GrammarParser.OR, 0); }
		public ProductionsContext productions() {
			return GetRuleContext<ProductionsContext>(0);
		}
		public ProductionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_productions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterProductions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitProductions(this);
		}
	}

	[RuleVersion(0)]
	public ProductionsContext productions() {
		ProductionsContext _localctx = new ProductionsContext(Context, State);
		EnterRule(_localctx, 10, RULE_productions);
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 70; _localctx._production = production();
				_localctx.ret = new Productions(_localctx._production.ret);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73; _localctx._production = production();
				State = 74; Match(OR);
				State = 75; _localctx._productions = productions();
				_localctx.ret = new Productions(_localctx._production.ret, _localctx._productions.ret);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProductionsArgContext : ParserRuleContext {
		public ProductionsWithCode ret;
		public ProductionArgContext _productionArg;
		public ProductionsArgContext _productionsArg;
		public ProductionArgContext productionArg() {
			return GetRuleContext<ProductionArgContext>(0);
		}
		public ITerminalNode OR() { return GetToken(GrammarParser.OR, 0); }
		public ProductionsArgContext productionsArg() {
			return GetRuleContext<ProductionsArgContext>(0);
		}
		public ProductionsArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_productionsArg; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterProductionsArg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitProductionsArg(this);
		}
	}

	[RuleVersion(0)]
	public ProductionsArgContext productionsArg() {
		ProductionsArgContext _localctx = new ProductionsArgContext(Context, State);
		EnterRule(_localctx, 12, RULE_productionsArg);
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; _localctx._productionArg = productionArg();
				_localctx.ret = new ProductionsWithCode(_localctx._productionArg.ret);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83; _localctx._productionArg = productionArg();
				State = 84; Match(OR);
				State = 85; _localctx._productionsArg = productionsArg();
				_localctx.ret = new ProductionsWithCode(_localctx._productionArg.ret,_localctx._productionsArg.ret);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProductionContext : ParserRuleContext {
		public Production ret;
		public GrammarNameContext _grammarName;
		public GrammarNameContext var;
		public LexerTokenContext _lexerToken;
		public ProductionContext _production;
		public GrammarNameContext[] grammarName() {
			return GetRuleContexts<GrammarNameContext>();
		}
		public GrammarNameContext grammarName(int i) {
			return GetRuleContext<GrammarNameContext>(i);
		}
		public ITerminalNode ASSIGN() { return GetToken(GrammarParser.ASSIGN, 0); }
		public LexerTokenContext lexerToken() {
			return GetRuleContext<LexerTokenContext>(0);
		}
		public ProductionContext production() {
			return GetRuleContext<ProductionContext>(0);
		}
		public ProductionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_production; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterProduction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitProduction(this);
		}
	}

	[RuleVersion(0)]
	public ProductionContext production() {
		ProductionContext _localctx = new ProductionContext(Context, State);
		EnterRule(_localctx, 14, RULE_production);
		try {
			State = 131;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90; _localctx._grammarName = grammarName();
				_localctx.ret = new Production(_localctx._grammarName.text);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 93; _localctx.var = _localctx._grammarName = grammarName();
				State = 94; Match(ASSIGN);
				}
				State = 96; _localctx._grammarName = grammarName();
				_localctx.ret = new Production(_localctx._grammarName.text, _localctx.var.text);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 99; _localctx._lexerToken = lexerToken();
				_localctx.ret = new Production(_localctx._lexerToken.text);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 102; _localctx.var = grammarName();
				State = 103; Match(ASSIGN);
				}
				State = 105; _localctx._lexerToken = lexerToken();
				_localctx.ret = new Production(_localctx._lexerToken.text, _localctx.var.text);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 108; _localctx._grammarName = grammarName();
				State = 109; _localctx._production = production();
				_localctx.ret =  new Production(_localctx._grammarName.text,_localctx._production.ret);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				{
				State = 112; _localctx.var = _localctx._grammarName = grammarName();
				State = 113; Match(ASSIGN);
				}
				State = 115; _localctx._grammarName = grammarName();
				State = 116; _localctx._production = production();
				_localctx.ret =  new Production(_localctx._grammarName.text, _localctx.var.text,_localctx._production.ret);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 119; _localctx._lexerToken = lexerToken();
				State = 120; _localctx._production = production();
				_localctx.ret = new Production(_localctx._lexerToken.text,_localctx._production.ret);
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				{
				State = 123; _localctx.var = grammarName();
				State = 124; Match(ASSIGN);
				}
				State = 126; _localctx._lexerToken = lexerToken();
				State = 127; _localctx._production = production();
				_localctx.ret = new Production(_localctx._lexerToken.text, _localctx.var.text,_localctx._production.ret);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				_localctx.ret = new Production();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProductionArgContext : ParserRuleContext {
		public ProductionWithCode ret;
		public GrammarNameContext _grammarName;
		public IToken _CODE;
		public GrammarNameContext var;
		public LexerTokenContext _lexerToken;
		public ProductionArgTailContext p;
		public GrammarNameContext[] grammarName() {
			return GetRuleContexts<GrammarNameContext>();
		}
		public GrammarNameContext grammarName(int i) {
			return GetRuleContext<GrammarNameContext>(i);
		}
		public ITerminalNode CODE() { return GetToken(GrammarParser.CODE, 0); }
		public ITerminalNode ASSIGN() { return GetToken(GrammarParser.ASSIGN, 0); }
		public LexerTokenContext lexerToken() {
			return GetRuleContext<LexerTokenContext>(0);
		}
		public ProductionArgTailContext productionArgTail() {
			return GetRuleContext<ProductionArgTailContext>(0);
		}
		public ProductionArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_productionArg; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterProductionArg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitProductionArg(this);
		}
	}

	[RuleVersion(0)]
	public ProductionArgContext productionArg() {
		ProductionArgContext _localctx = new ProductionArgContext(Context, State);
		EnterRule(_localctx, 16, RULE_productionArg);
		try {
			State = 183;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 133; _localctx._grammarName = grammarName();
				State = 134; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._grammarName.text, _localctx._grammarName.text, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 137; _localctx.var = _localctx._grammarName = grammarName();
				State = 138; Match(ASSIGN);
				}
				State = 140; _localctx._grammarName = grammarName();
				State = 141; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._grammarName.text, _localctx.var.text, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 144; _localctx._lexerToken = lexerToken();
				State = 145; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._lexerToken.text, _localctx._lexerToken.text, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 148; _localctx.var = grammarName();
				State = 149; Match(ASSIGN);
				}
				State = 151; _localctx._lexerToken = lexerToken();
				State = 152; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._lexerToken.text, _localctx.var.text, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 155; _localctx._grammarName = grammarName();
				State = 156; _localctx.p = productionArgTail();
				State = 157; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._grammarName.text, _localctx._grammarName.text, _localctx.p.ret, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				{
				State = 160; _localctx.var = _localctx._grammarName = grammarName();
				State = 161; Match(ASSIGN);
				}
				State = 163; _localctx._grammarName = grammarName();
				State = 164; _localctx.p = productionArgTail();
				State = 165; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._grammarName.text, _localctx.var.text, _localctx.p.ret, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 168; _localctx._lexerToken = lexerToken();
				State = 169; _localctx.p = productionArgTail();
				State = 170; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._lexerToken.text, _localctx._lexerToken.text, _localctx.p.ret, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				{
				State = 173; _localctx.var = grammarName();
				State = 174; Match(ASSIGN);
				}
				State = 176; _localctx._lexerToken = lexerToken();
				State = 177; _localctx.p = productionArgTail();
				State = 178; _localctx._CODE = Match(CODE);
				_localctx.ret =  new ProductionWithCode(_localctx._lexerToken.text, _localctx.var.text, _localctx.p.ret, (_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 181; _localctx._CODE = Match(CODE);
				_localctx.ret = new ProductionWithCode((_localctx._CODE!=null?_localctx._CODE.Text:null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
